<resources>
    <string name="app_name">DulceApps</string>
    <string name="PASO1">

        \n"PASO 1 \n\n Nesesitamos tener los ingredientes: \n\n 1. cupcake horneados o disponibles\n2. crema o nutella lo que gustes\n3. tener galletidas tipo prestzel \n4. galletas redondas tamaño moneda \n 5. dulces MyM y ojos de caramelo !!"

    </string>
    <string name="PASO2">
        \n PASO 2\n\n
        \n Recubrimos nuestro cupcakes con nuestra nuttella o nuestra crema de chocolate en este caso y colocamos nuestra
        galleta de la siguiente manera:\n

    </string>
    <string name="PASO3">
        \n\n PASO 3\n\n
        \n Colocamos nuestros pretzel y nuestros ojitos de caramelo de la siguiente manera:\n

    </string>
    <string name="PASOfinal">
        \n\n PASO FINAL\n\n
        \nEn este ultimo paso vamos a agregar nuestro MyM para dar el Toque final a nuestro chrismas-cake:\n\n

    </string>
    <string name="saludo">
        \n\n RECURSOS FINALES\n\n
        los caramelos y las galletas se añadieron utilizando la misma crema (Nuttella) o la de preferencia recuerden que es para comer no pegamento ni adesivos.\n\n

        \n\n Esta receta es una receta basada en las festividades navideñas espero que les alla sido de utilidad gracias por el apoyo\\n
    </string>

    <string name="cottontex">
        \n\nPaso 1:\n\n

Precalienta el horno a 200ºC. Es importante que esté a la temperatura adecuada cuando vayas a introducir la masa de tus cotton cupcakes.

\n\nPaso 2:\n\n

Tamiza en un mismo recipiente la harina, la levadura química y el bicarbonato. Es conveniente que no te saltes este paso para asegurarte una textura suelta y sin grumos. Mézclalos muy bien.

\n\nPaso 3:\n\n

Con ayuda de unas varillas, bate con energía las claras de huevo y el azúcar hasta dejarlas semimontadas. Este paso te resultará mucho menos trabajoso si empleas unas varillas eléctricas.

\n\nPaso 4:\n\n

Vuelve a las varillas de mano y remueve todo el tiempo mientras agregas poco a poco los ingredientes secos que has tamizado previamente a la mezcla de claras de huevo y azúcar.

\n\nPaso 5:\n\n

Integra la mantequilla en pomada (esto es, a temperatura ambiente y con textura de crema), el yogur, también a temperatura ambiente, y la mitad del aroma concentrado de algodón de azúcar e incorpóralos a la masa batiendo suavemente con una espátula de silicona.

\n\nPaso 6:\n\n

Si quieres cotton cupcakes de colores diferentes, separa la masa en recipientes distintos y añade a cada uno una gota del colorante que prefieras. Usa muy poquita cantidad para teñirlos de los tonos pastel propios del algodón de azúcar. Si quieres un extra de esponjosidad, deja reposar la masa durante dos horas en el frigorífico.

\n\nPaso 7:\n\n

Vierte la masa en cápsulas de cupcake previamente preparadas en molde de metal o silicona. No las llenes enteras para que no se derramen al crecer: deja libre un tercio de su capacidad. Dispón los moldes en una bandeja de horno y mételos en el horno precalentado. Tras los primeros 5 minutos, baja la temperatura a 180ºC y hornea tus cotton cupcakes durante 20 minutos más o hasta que al pinchar con una brocheta salga limpia. Sácalos y déjalos enfriar sobre una rejilla.

\n\nPaso 8:\n\n

Mientras se hornean los cotton cupcakes, prepara la cobertura de mantequilla o buttercream. Bate enérgicamente y durante largo rato (mejor con unas varillas eléctricas) la mantequilla en pomada con el azúcar glas y la otra mitad del aroma concentrado de algodón de azúcar. Si quieres coberturas de colores diferentes, cuando esté hecha la crema sepárala en recipientes diferentes, añade a cada una un poquito de colorante y vuelve a batir.\n\n

        \n\n LUEGO \n\n
        \nSirve tus cotton cupcakes en papeles de colores claros con una buena cucharada de cobertura por encima (haz que vaya a juego con el color de la magdalena o combina los tonos para que tu bandeja parezca una paleta multicolor). Adórnalos con trocitos de fruta desecada.\n

    </string>

    <string name="mangotext">
\n\nIngredientes para preparar el pastel de Mango\n\n
80 gr. de mantequilla\n
1 mango maduro de tamaño grande\n
50 gr. de galletas tipo María\n
200 gr. de agua\n
100 gr. de bizcochos de soletilla\n
Medio limón\n
200 gr. de nata para montar\n
6 láminas de gelatina\n
300 gr. de queso tipo Philadelphia\n
130 gr. de azúcar glasn\n\n

        Para hacer un riquísimo pastel  de mango, lo primero que debemos hacer es triturar bien las galletas y los bizcochos.\n\n A continuación, ponemos la mantequilla en un bol y la metemos unos segundos en el microondas hasta que se derrita. Después, la añadimos a las galletas y los bizcochos triturados y mezclamos bien.

\n\nA continuación, ponemos a precalentar el horno a 180º C, con calor por arriba y por abajo.\n\n Mientras se calienta, cogemos la mezcla de galletas, bizcochos y mantequilla y la ponemos en el fondo de un molde desmontable, cubriendo toda su superficie.\n\n Cuando el horno esté caliente, metemos el molde y lo dejamos unos diez minutos. \n\nA continuación lo sacamos y lo dejamos en el frigorífico, para adelantar el proceso de enfriado.

Alfajores de Chocolate
\nTarta de Galletas María y Chocolate
\nPelamos el mango y cortamos la mitad aproximadamente en trozos grandes y la otra mitad en trozos pequeños. Reservamos.

\nCogemos las láminas de gelatina y las ponemos a hidratar en un bol con agua.\n\n A continuación, echamos en una cacerola el agua y el zumo del medio limón y lo ponemos a fuego medio.\n\n Cuando el agua de la olla esté un poco templada vamos añadiendo las láminas de gelatina escurridas, mezclando todo bien.

\n\nA continuación, echamos en un bol el queso y el azúcar glas. \n\nMezclamos bien y reservamos.

\n\nColocamos los trozos grandes del mango en el vaso de la batidora y le añadimos el agua con limón y la gelatina. Trituramos y posteriormente colamos el jugo obtenido. La mitad de él se lo añadimos a la mezcla de queso y azúcar que teníamos preparada y la otra mitad la reservamos.

\n\nAparte, montamos la nata y la echamos a la mezcla del queso, el azúcar y el jugo del mango. \n\nRemovemos con movimientos envolventes hasta que todos los ingredientes estén bien mezclados. A continuación echamos los trocitos pequeños del mango, reservando unos cuantos para decoración. Mezclamos todo bien y lo echamos en el molde que teníamos en el frigorífico, sobre la base de galletas. \nDejamos que la tarta se termine de enfriar en el frigorífico.

\n\nCuando la tarta esté bien fría, desmoldamos, echamos por encima el jugo del mango que teníamos reservado y decoramos su superficie con los trozos de fruta.\n\n Volvemos a dejar que se enfríe en el frigorífico y lista para consumir. ¡Buenísima!

    </string>
    <string name="teschees">

\n\nIngredientes para preparar el Oreo pastelchees\n\n
1 paquete y medio de galletas Oreo\n
2 cucharaditas de vainilla\n
50 gr. de mantequilla\n
600 ml. de nata\n
250 gr. de queso de untar tipo Philadelphia\n
250 gr. de chocolate blanco\n
1 sobre de cuajada\n
100 ml. de leche\n
150 gr. de azúcar blanco\n
Cómo preparar Oreo pastelcheese\n\n
Para hacer un riquísimo pastel de queso y oreo, lo primero que debemos hacer es triturar un paquete de galletas Oreo, bien con un robot de cocina, o metiéndolas en una bolsa de bocadillo y pasándolas un rodillo reiteradamente hasta convertirlas en polvo.\n\n

Derretimos la mantequilla poniéndola unos segundos al microondas y mezclamos con las galletas trituradas y la vainilla. \nMezclamos todo bien y con la pasta que hemos conseguido forramos la base del molde, apretando con los dedos para que quede más firme. \nDespués, reservamos en el frigorífico.\n\n

Tarta Mousse de Natillas de Chocolate y Fresa\n
Pastel de Queso con Kiwi\n
Echamos la cuajada en un vaso de leche, removemos y reservamos. Aparte, mezclamos el azúcar y el queso hasta que los dos ingredientes estén bien integrados, y reservamos.\n

Ponemos en una cacerola la nata y el chocolate blanco, y damos vueltas hasta que hierva. \n\nEntonces añadimos la mezcla de queso y el azúcar.\n Volvemos a remover y cuando todos los ingredientes estén bien integrados, añadimos la cuajada y la vainilla. \n\nRemovemos y, si queremos podemos añadir galletas Oreo troceadas y, si no, las dejamos para adornar la tarta.\n\n

Vertemos la mezcla sobre la base que tenemos reservadas en el frigorífico y la volvemos a introducir en la nevera durante unas cinco horas aproximadamente.\n\n Cuando vayamos a servir, adornamos la superficie con galletas Oreo.\n\n ¡Deliciosa!

    </string>

</resources>
